[project]
name = "niagarapackagerepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "requests>=2.32.3",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.mypy]
mypy_path = ["src", "tests"]
